--- a/index.html
+++ b/index.html
@@ -3,120 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Medidas</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background-color: #f4f7fa;
-            color: #333;
-        }
-
-        .container {
-            background-color: #fff;
-            padding: 40px 30px;
-            border-radius: 12px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-            width: 320px;
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 24px;
-            margin-bottom: 20px;
-            color: #888;  /* Cinza claro para o título */
-        }
-
-        .input-group {
-            margin-bottom: 20px;
-            text-align: left;
-        }
-
-        label {
-            font-size: 14px;
-            margin-bottom: 5px;
-            display: block;
-            color: #666;
-        }
-
-        .input {
-            width: 100%;
-            padding: 12px 15px;
-            font-size: 16px;
-            border: 2px solid #ddd;
-            border-radius: 8px;
-            transition: all 0.3s ease-in-out;
-        }
-
-        .input:focus {
-            border-color: #ccc;  /* Cinza claro para foco */
-            box-shadow: 0 0 8px rgba(204, 204, 204, 0.5);
-            outline: none;
-        }
-
-        .branco {
-            background-color: #ffffff;
-        }
-
-        .cinza {
-            background-color: #f3f3f3;
-        }
-
-        .preto {
-            background-color: #e0e0e0;  /* Cinza claro para o fundo do campo preto */
-            color: #333;
-        }
-
-        button {
-            width: 100%;
-            padding: 14px 0;
-            font-size: 18px;
-            background-color: #ccc;  /* Cinza claro para o botão */
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background-color: #b3b3b3;  /* Cinza mais escuro para hover */
-        }
-
-        button:active {
-            background-color: #999;  /* Cinza ainda mais escuro para o clique */
-        }
-
-        .resultado {
-            font-size: 18px;
-            font-weight: bold;
-            color: #333;
-            margin-top: 20px;
-        }
-
-        @media (max-width: 480px) {
-            .container {
-                width: 90%;
-                padding: 25px;
-            }
-            h1 {
-                font-size: 20px;
-            }
-        }
-    </style>
+    <title>Desenhar Gráfica</title>
+    <!-- Link para a fonte Poppins do Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">  <!-- Link para o arquivo CSS -->
 </head>
 <body>
     <div class="container">
-        <h1>Calculadora de Medidas</h1>
+        <h1>Desenhar Gráfica</h1>  <!-- Título principal da página -->
+
+        <!-- Descrição da página -->
+        <p class="descricao">
+            Trabalhamos com medidas em metro quadrado, desta forma, por gentileza selecione as medidas abaixo e a quantidade necessária de seu produto!
+        </p>
 
         <div class="input-group">
             <label for="largura">Largura (cm):</label>
@@ -130,7 +29,7 @@
 
         <div class="input-group">
             <label for="quantidade">Quantidade:</label>
-            <input type="number" id="quantidade" class="input preto" placeholder="Digite a quantidade">
+            <input type="number" id="quantidade" class="input verde" placeholder="Digite a quantidade">
         </div>
 
         <button onclick="calcular()">Calcular</button>
@@ -138,29 +37,6 @@
         <h2 id="resultado" class="resultado"></h2>
     </div>
 
-    <script>
-        function calcular() {
-            // Obter os valores dos campos de entrada
-            const largura = parseFloat(document.getElementById("largura").value);
-            const altura = parseFloat(document.getElementById("altura").value);
-            const quantidade = parseInt(document.getElementById("quantidade").value);
-
-            // Verificar se todos os valores foram preenchidos corretamente
-            if (isNaN(largura) || isNaN(altura) || isNaN(quantidade)) {
-                alert("Por favor, preencha todos os campos corretamente.");
-                return;
-            }
-
-            // Calcular a área total em cm²
-            const areaPorItem = largura * altura;
-            const areaTotalCm2 = areaPorItem * quantidade;
-
-            // Converter para metros quadrados (1 m² = 10.000 cm²)
-            const areaTotalM2 = areaTotalCm2 / 10000;
-
-            // Mostrar o resultado com 2 casas decimais
-            document.getElementById("resultado").innerHTML = `Área Total: ${areaTotalM2.toFixed(2)} m²`;
-        }
-    </script>
+    <script src="script.js"></script>  <!-- Link para o arquivo JS -->
 </body>
 </html>
